--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@commitlint/cli": "^19.1.0",
     "@commitlint/config-conventional": "^19.1.0",
     "@testing-library/react": "^14.2.1",
