--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,6 +10,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile]
       - name: Set node version to 18
         uses: actions/setup-node@v3
         with:
