--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-starter",
+  "name": "resume-starter",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@7.1.0",
