--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^20.11.26",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
+    "@react-buddy/ide-toolbox": "^2.4.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
