--- a/package.json
+++ b/package.json
@@ -37,19 +37,21 @@
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@commitlint/cli": "^19.1.0",
     "@commitlint/config-conventional": "^19.1.0",
+    "@react-buddy/ide-toolbox": "^2.4.0",
     "@testing-library/react": "^14.2.1",
     "@tool-pack/basic": "^0.7.0",
     "@types/jest": "^29.5.12",
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.11.26",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
-    "@react-buddy/ide-toolbox": "^2.4.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "markdown-it": "^14.1.0",
     "npm-check-updates": "^16.14.15",
     "prettier": "^3.2.5",
     "react-scripts": "^5.0.1",
