feat: 在顶部添加'为 PDF 文件生成页码'功能按钮

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@testing-library/react": "^14.2.1",
     "@tool-pack/basic": "^0.7.0",
+    "@tool-pack/dom": "^0.2.1",
     "@types/jest": "^29.5.12",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.11.26",
@@ -53,6 +54,7 @@
     "lint-staged": "^15.2.2",
     "markdown-it": "^14.1.0",
     "npm-check-updates": "^16.14.15",
+    "pdf-lib": "^1.17.1",
     "prettier": "^3.2.5",
     "react-scripts": "^5.0.1",
     "resetcss": "^1.0.3",
