--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "resume-starter",
-  "version": "0.0.1",
-  "private": true,
+  "name": "@mxssfd/resume-starter",
+  "version": "0.0.0",
   "packageManager": "pnpm@7.1.0",
   "scripts": {
     "start": "vite serve --port 8080",
     "build": "vite build",
+    "build:lib": "vite build -c lib.vite.config.ts && pnpm build:dts",
+    "build:dts": "tsc -p ./tsconfig.json --emitDeclarationOnly && tsc-alias -p ./tsconfig.json && rollup -c ./dts.rollup.config.js",
     "preview": "vite preview --port 8080",
     "check:lint": "eslint \"**/*.{ts,tsx}\"",
     "check:ts": "tsc --noEmit",
+    "check:all": "pnpm check:ts & pnpm check:lint",
     "check:deps": "ncu -u",
     "check:ts:lint": "npm run check:ts && npm run check:lint",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "esno scripts/release.ts",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
+  "types": "dist/index.d.ts",
+  "main": "dist/index.es.js",
+  "module": "dist/index.es.js",
+  "exports": {
+    ".": "./dist/index.es.js",
+    "./dist/*": "./dist/*"
+  },
+  "files": [
+    "dist",
+    "CHANGELOG.md",
+    "LICENSE"
+  ],
   "lint-staged": {
     "*.{json,html,md,yaml}": [
       "prettier --write",
@@ -27,9 +43,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "web-vitals": "^3.5.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -46,21 +60,33 @@
     "@types/node": "^20.11.26",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
+    "@types/semver": "^7.5.8",
     "@vitejs/plugin-react": "^4.2.1",
+    "chalk": "^5.3.0",
+    "conventional-changelog-cli": "^4.1.0",
+    "enquirer": "^2.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "esno": "^4.7.0",
+    "execa": "^8.0.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "markdown-it": "^14.1.0",
     "npm-check-updates": "^16.14.15",
     "pdf-lib": "^1.17.1",
     "prettier": "^3.2.5",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "resetcss": "^1.0.3",
+    "rollup": "^4.13.2",
+    "rollup-plugin-dts": "^6.1.0",
     "sass": "^1.71.1",
+    "semver": "^7.6.0",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.4.2",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "web-vitals": "^3.5.2"
   },
   "browserslist": {
     "production": [
@@ -75,7 +101,6 @@
     ]
   },
   "description": "resume starter",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mengxinssfd/resume-starter.git"
@@ -84,5 +109,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mengxinssfd/resume-starter/issues"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
